# rag_chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yml  docker-publish.yaml
app/: __init__.py  main.py  run.py  worker.py
configs/: config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
fronted/: index.html
frontend/: script.js  styles.css
mlops/: cli.py  common.py  evaluate_rag.py  finetune_embedding.py  hyperparam_tuning.py  metrics.py  mlflow_utils.py  model_registry.py  monitoring.py  registry.py  train_rag.py  tune_optuna.py
src/: __init__.py  config_loader.py  database.py  db_session_manager.py  documents_processor.py  queue.py  rag_chain.py  session_manager.py  upload_storage.py  vector_store.py
tests/: test_api.py  test_rag_chain.py  test_smoke.py
